--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -1,13 +1,14 @@
 name: firts K6 Load Test
 on: [push]
 jobs:
-  build: first K6 Load Test
-  tuns-on: ubuntu-latest
-  steps:
-    - name: step 1 - checkout
-      uses: actions/checkout@v3
+  build:
+    name: K6 load test  
+    runs-on: ubuntu-latest
+    steps:
+      - name: step 1 - checkout
+        uses: actions/checkout@v3
 
-    - name: step 2 - run K6 Load Test
-      uses: grafana/k6-action@v0.2.0
-      with: 
-        filename: scripsts/test.js
+      - name: step 2 - run first K6 Load Test
+        uses: grafana/k6-action@v0.2.0
+        with: 
+          filename: scripts/test.js
